--- a/Analyzing Orange Telecoms Customer Churn Dataset.ipynb
+++ b/Analyzing Orange Telecoms Customer Churn Dataset.ipynb
@@ -9,31 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "No module named plotly.plotly",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-9334b0942556>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplotly\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# import plotly.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: No module named plotly.plotly"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import plotly.plotly as py\n"
+    "import plotly.plotly as py\n",
+    "import cufflinks as cf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -70,8 +59,7 @@
    "source": [
     "# Import dataset with spark CSV package\n",
     "orange_sprk_df = sqlContext.read.format(\"com.databricks.spark.csv\") \\\n",
-    "    .options(header='true', inferschema='true')\\\n",
-    "    .load(\"../_datasets_downloads/churn-bigml-80.csv\")\n",
+    "    .options(header='true', inferschema='true').load(\"../_datasets_downloads/churn-bigml-80.csv\")\n",
     "    \n",
     "# Print Dataframe Schema. That's DataFrame = Dataset[Row]\n",
     "orange_sprk_df.printSchema()"
@@ -79,30 +67,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Number of customer data:', 2666)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "Row(State=u'KS', Account length=128, Area code=415, International plan=u'No', Voice mail plan=u'Yes', Number vmail messages=25, Total day minutes=265.1, Total day calls=110, Total day charge=45.07, Total eve minutes=197.4, Total eve calls=99, Total eve charge=16.78, Total night minutes=244.7, Total night calls=91, Total night charge=11.01, Total intl minutes=10.0, Total intl calls=3, Total intl charge=2.7, Customer service calls=1, Churn=False)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display first Row or Spark Dataset\n",
+    "print(\"Number of customer data:\",orange_sprk_df.count())\n",
     "orange_sprk_df.first()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -253,6 +249,121 @@
        "      <td>3</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>118</td>\n",
+       "      <td>510</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>223.4</td>\n",
+       "      <td>98</td>\n",
+       "      <td>37.98</td>\n",
+       "      <td>220.6</td>\n",
+       "      <td>101</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>203.9</td>\n",
+       "      <td>118</td>\n",
+       "      <td>9.18</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>MA</td>\n",
+       "      <td>121</td>\n",
+       "      <td>510</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>24</td>\n",
+       "      <td>218.2</td>\n",
+       "      <td>88</td>\n",
+       "      <td>37.09</td>\n",
+       "      <td>348.5</td>\n",
+       "      <td>108</td>\n",
+       "      <td>29.62</td>\n",
+       "      <td>212.6</td>\n",
+       "      <td>118</td>\n",
+       "      <td>9.57</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.03</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>MO</td>\n",
+       "      <td>147</td>\n",
+       "      <td>415</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>79</td>\n",
+       "      <td>26.69</td>\n",
+       "      <td>103.1</td>\n",
+       "      <td>94</td>\n",
+       "      <td>8.76</td>\n",
+       "      <td>211.8</td>\n",
+       "      <td>96</td>\n",
+       "      <td>9.53</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>WV</td>\n",
+       "      <td>141</td>\n",
+       "      <td>415</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>37</td>\n",
+       "      <td>258.6</td>\n",
+       "      <td>84</td>\n",
+       "      <td>43.96</td>\n",
+       "      <td>222.0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>18.87</td>\n",
+       "      <td>326.4</td>\n",
+       "      <td>97</td>\n",
+       "      <td>14.69</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>RI</td>\n",
+       "      <td>74</td>\n",
+       "      <td>415</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>187.7</td>\n",
+       "      <td>127</td>\n",
+       "      <td>31.91</td>\n",
+       "      <td>163.4</td>\n",
+       "      <td>148</td>\n",
+       "      <td>13.89</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>94</td>\n",
+       "      <td>8.82</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -264,6 +375,11 @@
        "2    NJ             137        415                 No              No   \n",
        "3    OH              84        408                Yes              No   \n",
        "4    OK              75        415                Yes              No   \n",
+       "5    AL             118        510                Yes              No   \n",
+       "6    MA             121        510                 No             Yes   \n",
+       "7    MO             147        415                Yes              No   \n",
+       "8    WV             141        415                Yes             Yes   \n",
+       "9    RI              74        415                 No              No   \n",
        "\n",
        "   Number vmail messages  Total day minutes  Total day calls  \\\n",
        "0                     25              265.1              110   \n",
@@ -271,6 +387,11 @@
        "2                      0              243.4              114   \n",
        "3                      0              299.4               71   \n",
        "4                      0              166.7              113   \n",
+       "5                      0              223.4               98   \n",
+       "6                     24              218.2               88   \n",
+       "7                      0              157.0               79   \n",
+       "8                     37              258.6               84   \n",
+       "9                      0              187.7              127   \n",
        "\n",
        "   Total day charge  Total eve minutes  Total eve calls  Total eve charge  \\\n",
        "0             45.07              197.4               99             16.78   \n",
@@ -278,6 +399,11 @@
        "2             41.38              121.2              110             10.30   \n",
        "3             50.90               61.9               88              5.26   \n",
        "4             28.34              148.3              122             12.61   \n",
+       "5             37.98              220.6              101             18.75   \n",
+       "6             37.09              348.5              108             29.62   \n",
+       "7             26.69              103.1               94              8.76   \n",
+       "8             43.96              222.0              111             18.87   \n",
+       "9             31.91              163.4              148             13.89   \n",
        "\n",
        "   Total night minutes  Total night calls  Total night charge  \\\n",
        "0                244.7                 91               11.01   \n",
@@ -285,6 +411,11 @@
        "2                162.6                104                7.32   \n",
        "3                196.9                 89                8.86   \n",
        "4                186.9                121                8.41   \n",
+       "5                203.9                118                9.18   \n",
+       "6                212.6                118                9.57   \n",
+       "7                211.8                 96                9.53   \n",
+       "8                326.4                 97               14.69   \n",
+       "9                196.0                 94                8.82   \n",
        "\n",
        "   Total intl minutes  Total intl calls  Total intl charge  \\\n",
        "0                10.0                 3               2.70   \n",
@@ -292,23 +423,62 @@
        "2                12.2                 5               3.29   \n",
        "3                 6.6                 7               1.78   \n",
        "4                10.1                 3               2.73   \n",
+       "5                 6.3                 6               1.70   \n",
+       "6                 7.5                 7               2.03   \n",
+       "7                 7.1                 6               1.92   \n",
+       "8                11.2                 5               3.02   \n",
+       "9                 9.1                 5               2.46   \n",
        "\n",
        "   Customer service calls  Churn  \n",
        "0                       1  False  \n",
        "1                       1  False  \n",
        "2                       0  False  \n",
        "3                       2  False  \n",
-       "4                       3  False  "
+       "4                       3  False  \n",
+       "5                       0  False  \n",
+       "6                       3  False  \n",
+       "7                       0  False  \n",
+       "8                       0  False  \n",
+       "9                       0  False  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "orange_telecom_pd = orange_sprk_df.toPandas()\n",
-    "orange_telecom_pd.head()"
+    "o\n",
+    "orange_telecom_pd.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~RichardAfolabi/556.embed\" height=\"587px\" width=\"1116px\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ov_stats_1 = orange_telecom_pd[['Account length', 'Total day minutes', 'Total day calls', 'Total night minutes']]\n",
+    "\n",
+    "ov_stats_1.iplot(kind='box', orientation='v')\n",
+    "\n"
    ]
   },
   {
@@ -318,7 +488,10 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "ov_stats = orange_telecom_pd[['Account length', 'Customer service calls']]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
