--- a/Analyzing Orange Telecoms Customer Churn Dataset.ipynb
+++ b/Analyzing Orange Telecoms Customer Churn Dataset.ipynb
@@ -4,12 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analyzing Orange Telecoms Customer Churn Dataset"
+    "# Analyzing Orange Telecoms Customer Churn Dataset\n",
+    "\n",
+    "Predicting which customer is likely to cancel subscription to a service. It has become a common practise across banks, ISPs, insurance firms and credit card companies.\n",
+    "\n",
+    "### Run `Apache pyspark` from the terminal:\n",
+    "Load `pyspark` with the [Spark-CSV](http://spark-packages.org/package/databricks/spark-csv) package.\n",
+    "\n",
+    "> IPYTHON_OPTS=\"notebook\" ~/path_to_pyspark --packages com.databricks:spark-csv_2.11:1.4.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -21,8 +28,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fetching and Importing Churn Dataset\n",
+    "For this tutorial, we'll be using the Orange Telecoms Churn Dataset. It consists of cleaned customer activity data (features), along with a churn label specifying whether the customer canceled their subscription or not. The data can be fetched from BigML's S3 bucket, [churn-80](https://bml-data.s3.amazonaws.com/churn-bigml-80.csv) and [churn-20](https://bml-data.s3.amazonaws.com/churn-bigml-20.csv). The two sets are from the same batch, but have been split by an 80/20 ratio. We'll use the larger set for training and cross-validation purposes, and the smaller set for final testing and model performance evaluation. The two data sets have been included in this repository for convenience."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,10 +73,18 @@
    ],
    "source": [
     "# Import dataset with spark CSV package\n",
-    "orange_sprk_df = sqlContext.read.format(\"com.databricks.spark.csv\") \\\n",
-    "    .options(header='true', inferschema='true').load(\"../_datasets_downloads/churn-bigml-80.csv\")\n",
-    "    \n",
+    "orange_sprk_df = sqlContext.read.load(\"../_datasets_downloads/churn-bigml-80.csv\",\n",
+    "                                format='com.databricks.spark.csv',\n",
+    "                                header='true',\n",
+    "                                inferschema='true')\n",
+    "\n",
+    "orange_final_dataset = sqlContext.read.load(\"../_datasets_downloads/churn-bigml-20.csv\",\n",
+    "                                format='com.databricks.spark.csv',\n",
+    "                                header='true',\n",
+    "                                inferschema='true')\n",
+    "\n",
     "# Print Dataframe Schema. That's DataFrame = Dataset[Row]\n",
+    "orange_sprk_df.cache()\n",
     "orange_sprk_df.printSchema()"
    ]
   },
